<resources>
    <string name="app_name">محروقات</string>
    <string name="create_new_distributor">إنشاء موزّع جديد</string>
    <string name="create_new_customer">إنشاء زبون جديد</string>
    <string name="button">إنشاء الموزّع</string>
    <string name="full_name">الإسم الكامل</string>
    <string name="password">كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="national_id">الرقم الوطني</string>
    <string name="mobile">رقم الموبايل</string>
    <string name="address">العنوان</string>
    <string name="commercial_register_no">رقم السجل التجاري</string>
    <string name="max_cylinders">عدد الإسطوانات الأعظمي</string>
    <string name="username_or_id">Username Or ID</string>
    <string name="login">تسجيل الدخول</string>
    <string name="welcome_to_mahrukat_application">مرحباً في تطبيق محروقات</string>
    <string name="please_login_to_continue">تسجيل الدخول للمتابعة</string>
    <string-array name="userType">
        <item>مدير</item>
        <item>زبون</item>
        <item>موزّع</item>
    </string-array>
    <string name="select_user_type_please">يرجى إختيار نوع المستخدم</string>
    <string name="card_id">رقم البطاقة الذكيّة</string>
    <string name="create_customer">إنشاء زبون</string>
    <string name="Please_select_distributor">يرجى اختيار موزع من القائمة أدناه</string>
    <string name="edit_distributor">تعديل موزّع</string>
    <string name="edit_customer">تعديل زبون</string>
    <string name="update">تعديل</string>
</resources>