<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize"
    tools:context=".view.DistributorRegistrationActivity">


    <LinearLayout
        android:layout_width="237dp"
        android:layout_height="603dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            app:srcCompat="@drawable/add_person" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="396dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/distributor_registration_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/full_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/distributor_registration_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/distributor_registration_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/distributor_registration_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/mobile"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/distributor_registration_national_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/national_id"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/distributor_registration_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/address"
                    android:inputType="text" />

                <Spinner
                    android:id="@+id/distributor_registration_city_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <Spinner
                    android:id="@+id/distributor_registration_sector_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/distributor_registration_cr_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/commercial_register_no"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/distributor_registration_max_cylinders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/max_cylinders"
                    android:inputType="number" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/distributor_registration_btn"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginBottom="93dp"
            android:text="@string/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:layout_constraintVertical_bias="0.808"
            tools:ignore="MissingConstraints" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>