<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditDistributorActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="268dp"
        android:layout_height="138dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="17dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Please_select_distributor"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/select_distributor"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_selected_dis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/distributor_registration_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/full_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/distributor_registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/distributor_registration_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/mobile"
                android:inputType="number" />

            <EditText
                android:id="@+id/distributor_registration_national_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/national_id"
                android:inputType="number" />

            <EditText
                android:id="@+id/distributor_registration_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/address"
                android:inputType="text" />

            <Spinner
                android:id="@+id/distributor_registration_city_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <Spinner
                android:id="@+id/distributor_registration_sector_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <EditText
                android:id="@+id/distributor_registration_cr_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/commercial_register_no"
                android:inputType="number" />

            <EditText
                android:id="@+id/distributor_registration_max_cylinders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/max_cylinders"
                android:inputType="number" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/edit_selected_dis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

</androidx.constraintlayout.widget.ConstraintLayout>