<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="237dp"
        android:layout_height="603dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            app:srcCompat="@drawable/gas_tank" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="396dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="@string/welcome_to_mahrukat_application"
                    android:textColor="#168EED"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="@string/please_login_to_continue" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:gravity="center"
                    android:text="@string/select_user_type_please" />

                <Spinner
                    android:id="@+id/userTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="14dp" />

                <EditText
                    android:id="@+id/username_or_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/username_or_id"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="22dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>