<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AdminActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="416dp"
        android:layout_height="602dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="203dp"
            app:srcCompat="@drawable/gas_tank"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="72dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="Welcome to MAHRUKAT"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#0990FB"
            android:typeface="normal"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="235dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Please Select Operation" />

        <Button
            android:id="@+id/create_new_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_customer"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="489dp" />

        <Button
            android:id="@+id/create_new_distributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_distributor"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="377dp" />

        <Button
            android:id="@+id/edit_distributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_distributor"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="425dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_customer"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="296dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Distributor Requests"
            tools:layout_editor_absoluteX="113dp"
            tools:layout_editor_absoluteY="537dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

